Fixed up the hotels on mobile

--- a/html/css/justified-nav.css
+++ b/html/css/justified-nav.css
@@ -74,6 +74,13 @@ iframe,
   height: 152px;
 }
 
+.hotel-info {
+  margin-left: 7px;
+  float: left;
+  padding:20px 0;
+  border-bottom: 1px solid #CCC;
+}
+
 /* Responsive: Portrait tablets and up */
 @media (min-width: 768px) {
   .nav-justified {
@@ -127,6 +134,13 @@ iframe,
 
   #logo {
     width: 400px;
+  }
+
+  .hotel-info {
+    margin-left: 7px;
+    float: left;
+    padding: 0;
+    border: none;
   }
 }
 
@@ -335,11 +349,6 @@ a.view-bio:hover {
 .hotels .hotel-content {
   display: block;
   height: 100px;
-}
-
-.hotel-info {
-  margin-left: 7px;
-  float: left;
 }
 
 .hotel-photo {
